1-i changed the structure of the projects and allow to run it without build 2-run all services

--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
 MONGO_URI = mongodb://127.0.0.1:27017/map_coords
+PORT_ZONES = 8084
 PORT_TRAFFICS = 8083
+PORT_ROUTES = 8081
+PORT_BUILDINGS = 8080
