--- a/route/package.json
+++ b/route/package.json
@@ -4,13 +4,19 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
-    "start": "node dist/index.js"
+    "start": "nodemon index.ts"
   },
   "dependencies": {
+    "@types/express": "^5.0.0",
+    "@types/node": "^22.13.8",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "5.0.1",
-    "mongoose": "^6.1.0",
-    "nodemon": "^3.1.9"
+    "mongoose": "^6.1.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.9",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.8.2"
   }
 }
