--- a/riscCalc/tsconfig.json
+++ b/riscCalc/tsconfig.json
@@ -1,9 +1,10 @@
 {
-    "extends": "../tsconfig.base.json",
-    "compilerOptions": {
-      "outDir": "dist",
-      "rootDir": "src"
-    },
-    "include": ["src"]
+  "compilerOptions": {
+    "target": "es6",
+    "module": "commonjs",
+    "rootDir": "./",
+    "outDir": "./build",
+    "esModuleInterop": true,
+    "strict": true
   }
-  
+}
