--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
   ],
   "scripts": {
     "build": "npm run build --workspaces",
-    "start": "concurrently \"npm run start:building\" \"npm run start:route\" \"npm run start:traffic_light\" \"npm run start:zone\"",
+    "start": "concurrently \"npm run start:building\" \"npm run start:route\" \"npm run start:traffic_light\" \"npm run start:zone\" \"npm run start:riscCalc\"",
     "start:building": "nodemon --exec ts-node ./building/index.ts",
     "start:route": "nodemon --exec ts-node ./route/index.ts",
     "start:traffic_light": "nodemon --exec ts-node ./traffic_light/index.ts",
-    "start:zone": "nodemon --exec ts-node ./zone/index.ts"
+    "start:zone": "nodemon --exec ts-node ./zone/index.ts",
+    "start:riscCalc": "nodemon --exec ts-node ./riscCalc/index.ts"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
