--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "start:riscCalc": "nodemon --exec ts-node ./riscCalc/index.ts"
   },
   "devDependencies": {
+    "@types/axios": "^0.9.36",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/node": "^22.13.8",
@@ -28,6 +29,7 @@
     "typescript": "^5.8.2"
   },
   "dependencies": {
+    "axios": "^1.8.1",
     "cors": "^2.8.5",
     "dotenv": "16.4.7",
     "express": "5.0.1",
