--- a/riscCalc/package.json
+++ b/riscCalc/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@types/express": "^5.0.0",
     "@types/node": "^22.13.8",
+    "axios": "^1.8.1",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "5.0.1",
