--- a/Astar/package.json
+++ b/Astar/package.json
@@ -3,10 +3,17 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon src/server.js"
   },
-  "keywords": [],
-  "author": "",
+  "author": "salah",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
+    "js-priority-queue": "^0.1.5",
+    "mongoose": "^8.12.1"
+  }
 }
