--- a/riscCalc/package.json
+++ b/riscCalc/package.json
@@ -12,10 +12,14 @@
     "axios": "^1.8.1",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
-    "express": "5.0.1",
-    "mongoose": "^6.1.0"
+    "express": "^5.0.1",
+    "express-ws": "^5.0.2",
+    "mongoose": "^6.1.0",
+    "socket.io": "^4.8.1",
+    "ws": "^8.18.1"
   },
   "devDependencies": {
+    "@types/express-ws": "^3.0.5",
     "nodemon": "^3.1.9",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.2"
