--- a/riscCalc/package.json
+++ b/riscCalc/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^22.13.8",
     "axios": "^1.8.1",
     "cors": "^2.8.5",
+    "csv-parser": "^3.2.0",
     "dotenv": "^10.0.0",
     "express": "^5.0.1",
     "express-ws": "^5.0.2",
