--- a/riscCalc/package.json
+++ b/riscCalc/package.json
@@ -16,6 +16,7 @@
     "mongoose": "^6.1.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "nodemon": "^3.1.9",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.2"
