--- a/notifications/package.json
+++ b/notifications/package.json
@@ -4,11 +4,11 @@
     "main": "dist/index.js",
     "scripts": {
         "build": "tsc",
-        "start": "nodemon index.ts"
+        "start": "node build/index.js",
+        "dev": "nodemon --exec ts-node index.ts"
     },
     "dependencies": {
-        "@types/express": "^5.0.0",
-        "@types/node": "^22.13.8",
+        "axios": "^1.8.1",
         "cors": "^2.8.5",
         "dotenv": "^10.0.0",
         "express": "5.0.1",
@@ -16,6 +16,8 @@
         "openai": "^4.90.0"
     },
     "devDependencies": {
+        "@types/express": "^5.0.1",
+        "@types/node": "^22.13.14",
         "nodemon": "^3.1.9",
         "ts-node": "^10.9.2",
         "typescript": "^5.8.2"
