Add @types/cors to devDependencies, update MONGO_URI, and refactor weather controller

--- a/riscCalc/.env
+++ b/riscCalc/.env
@@ -1,4 +1,4 @@
-MONGO_URI = mongodb://127.0.0.1:27017/geofencingDB
+MONGO_URI = mongodb://127.0.0.1:27017/map_coords
 ALADHAN_API_BASE_URL = https://api.aladhan.com/v1/timingsByCity
 PORT_RISC = 8085
 WEATHER_API_LINK=https://api.openweathermap.org/data/2.5/weather?q=
