Update environment variables, refactor port assignments, and enhance error handling in accident and notification services

--- a/.env
+++ b/.env
@@ -1,7 +1,12 @@
-MONGO_URI = mongodb://127.0.0.1:27017/map_coords
+MONGO_URI = mongodb://127.0.0.1:27017/geofencingDB
+MONGO_URI_accident=mongodb://127.0.0.1:27017/historical_accidents
+MONGO_URI_NOTIFICATIONS = mongodb://127.0.0.1:27017/geofence-app
 PORT_ZONES = 8084
 PORT_TRAFFICS = 8083
 PORT_ROUTES = 8081
 PORT_BUILDINGS = 8080
 PORT_RISC = 8085
-
+PORT_WEATHER = 8090
+WEATHER_API_LINK=https://api.openweathermap.org/data/2.5/weather?q=
+API_KEY_FOR_WEATHER=aae70bd38c11453f18b89705748e4618
+DEEPSEEK_API_KEY=sk-b2686a803f7848f687b56d12efc593b0
