--- a/accidents/package.json
+++ b/accidents/package.json
@@ -4,20 +4,20 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
-    "start": "nodemon index.ts"
+    "start": "node-ts index.ts"
   },
   "dependencies": {
-    "@types/express": "^5.0.0",
-    "@types/node": "^22.13.8",
-    "axios": "^1.8.1",
-    "cors": "^2.8.5",
-    "dotenv": "^10.0.0",
-    "express": "5.0.1",
-    "mongoose": "^6.1.0"
+    "@types/express": "5.0.1",
+    "@types/node": "22.13.17",
+    "axios": "1.8.4",
+    "cors": "2.8.5",
+    "dotenv": "16.4.7",
+    "express": "5.1.0",
+    "mongoose": "8.13.1"
   },
   "devDependencies": {
-    "nodemon": "^3.1.9",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.8.2"
+    "nodemon": "3.1.9",
+    "ts-node": "10.9.2",
+    "typescript": "5.8.2"
   }
 }
