--- a/package.json
+++ b/package.json
@@ -11,30 +11,30 @@
   ],
   "scripts": {
     "build": "npm run build --workspaces",
-    "start": "concurrently \"npm run start:building\" \"npm run start:route\" \"npm run start:traffic_light\" \"npm run start:zone\" \"npm run start:riscCalc\" \"npm run start:notifications\"",
-    "start:building": "nodemon --exec ts-node ./building/index.ts",
+    "start": "concurrently \"npm run start:accidents\" \"npm run start:route\" \"npm run start:zone\" \"npm run start:riscCalc\" \"npm run start:notifications\" \"npm run start:weither\"",
+    "start:accidents": "nodemon --exec ts-node ./accidents/index.ts",
     "start:route": "nodemon --exec ts-node ./route/index.ts",
-    "start:traffic_light": "nodemon --exec ts-node ./traffic_light/index.ts",
     "start:zone": "nodemon --exec ts-node ./zone/index.ts",
     "start:riscCalc": "nodemon --exec ts-node ./riscCalc/index.ts",
-    "start:notifications": "nodemon --exec ts-node ./notifications/index.ts"
+    "start:notifications": "nodemon --exec ts-node ./notifications/index.ts",
+    "start:weither": "nodemon --exec ts-node ./weather/index.ts"
   },
   "devDependencies": {
-    "@types/axios": "^0.9.36",
-    "@types/cors": "^2.8.17",
-    "@types/express": "^5.0.0",
-    "@types/node": "^22.13.8",
-    "concurrently": "^9.1.2",
-    "nodemon": "^3.1.9",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.8.2"
+    "@types/axios": "0.9.36",
+    "@types/cors": "2.8.17",
+    "@types/express": "5.0.1",
+    "@types/node": "22.13.17",
+    "concurrently": "9.1.2",
+    "nodemon": "3.1.9",
+    "ts-node": "10.9.2",
+    "typescript": "5.8.2"
   },
   "dependencies": {
-    "axios": "^1.8.1",
-    "cors": "^2.8.5",
+    "axios": "1.8.4",
+    "cors": "2.8.5",
     "dotenv": "16.4.7",
-    "express": "5.0.1",
-    "mongoose": "8.11.0"
+    "express": "5.1.0",
+    "mongoose": "8.13.1"
   },
   "engines": {
     "node": ">=14.0.0"
