--- a/.env
+++ b/.env
@@ -7,6 +7,8 @@ PORT_ROUTES = 8081
 PORT_BUILDINGS = 8080
 PORT_RISC = 8085
 PORT_WEATHER = 8090
+PORT_ACCIDENT=8010
+PORT_NOTIFICATIONS=8050
 WEATHER_API_LINK=https://api.openweathermap.org/data/2.5/weather?q=
 API_KEY_FOR_WEATHER=aae70bd38c11453f18b89705748e4618
 DEEPSEEK_API_KEY=sk-b2686a803f7848f687b56d12efc593b0
